2004-07-24  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Consolidated the option typevariables into a
	* dictionary	single array, Snit_optionInfo.  Implemented
	* roadmap.txt	parsing of the new option definition syntax;
	* snit.test	the -validatemethod, -configuremethod, and
			-cgetmethod options as yet have no effect.
			Added tests to ensure that the 'option' and
			'delegate option' statements populate
			Snit_optionInfo properly.

			Added "starcomp" to the Snit_optionInfo array.
			When "delegate option *" is used, "*" no longer 
			has a "target-$opt" entry, nor does it appear
			in "delegated-$comp".  Instead, "starcomp" is the
			name of the component to which option "*" is
			delegated, or "".

			Reimplemented user-defined "cget" handlers using
			the "-cgetmethod" option definition option.  
			The "oncget" statement now defines a method, and
			sets the option.

2004-07-21  Will Duquette  <will@wjduquette.com>

	* README.txt 	Updated to reflect recent changes.
	* snit.man

2004-07-20  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Finished the refactoring job.  All extraneous
	* roadmap.txt	code has been moved from the type templates to the
			::snit:: runtime.

2004-07-19  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Refactored %TYPE%::Snit_optionget to 
	* roadmap.txt	::snit::RT.OptionDbGet. Refactored 
			%TYPE%::Snit_cleanup to ::snit::RT.DestroyObject,
			%TYPE%::Snit_tracer to ::snit::RT.InstanceTrace,
			and %TYPE%::Snit_removetrace to
			::snit::RT.RemoveInstanceTrace.

2004-07-17  Will Duquette  <will@wjduquette.com>

	* snit.tcl	  Added "delegate typemethod ..." in all its glory,
	* snit.test	  including "delegate typemethod *".  Made it 
	* dictionary.txt  Possible to delegate an instance method to a
	* roadmap.txt	  typecomponent.  Added tests to ensure that
			  variable/typevariable and component/typecomponent 
			  names do not collide.  Updated a number of 
			  compilation error messages for consistency.